src/k8s/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: poi
        image: registrywnu3987.azurecr.io/tripinsights/poi:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: poi
---
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  ports:
  - port: 80
  selector:
    app: poi
