src/k8s/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: userprofile
        image: registrywnu3987.azurecr.io/tripinsights/userprofile:v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: userprofile
        volumeMounts:
        - name: sql-password
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: sql-password
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"   
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
